feat(datagen): implement data generation